<resources>
    <string name="app_name">Road Statistics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_bottom_nav">Road Statistics</string>
    <string name="daysMenu">Days</string>
    <string name="mapMenu">Map</string>
    <string name="settingsMenu">Settings</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="juli">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no_months">empty</string>
    <string name="no_stat_in_this_month">No stat in this month</string>
    <string name="startWalk">Start</string>
    <string name="endWalk">End</string>
    <string name="unknown_addres">Unknown address</string>
    <string name="plus_one">Plus one</string>
    <string name="minus_one">Minus one</string>
    <string name="settings_spinner_desc">You can select current year, if you using app during several years.</string>
    <string name="settingsLoopDesc">You can change the standard value of the approximation when opening the map</string>
    <string name="fr_one_days_list">Days list</string>
    <string name="fr_map">Map</string>
    <string name="fr_settings">Settings</string>
    <string name="fr_picket_day">Day information on map</string>
    <string name="you_can_change_color_of_route_lines_on_you_maps">You can change color of route lines on you maps.</string>
    <string name="line">Line</string>
    <string name="notification_location_description">Running statistic read your location and confirming to you statistics.</string>
    <string name="notificationLocationTitle">Location service is now run.</string>
    <string name="notification_location_name">Road Statistics Location service</string>
    <string name="notificationLostInternetConnection">Road Statistic application need internet connection to work correct. Please, turn ON you internet and click on app icon or ignore this notification. Have a good day :)</string>
    <string name="notificationLostInternetConnectionTitle">Internet Connection is lost :(</string>
    <string name="notification_large_description">If you turn off this notification, app can\'t work correct.</string>
    <string name="name_pool">Name pool</string>
    <string name="okay">Okay</string>
    <string name="title">First run</string>
    <string name="day_day_list">Day </string>
    <string name="km_distance">KM</string>
    <string name="total_passed">Total passed -\u0020</string>
</resources>