<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_days">

    <fragment
        android:id="@+id/nav_days"
        android:name="by.roadstatistics.ui.home.HomeFragment"
        android:label="@string/daysMenu"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/nav_map_global" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_map_global"
        android:name="by.roadstatistics.ui.dashboard.DashboardFragment"
        android:label="@string/mapMenu"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/nav_days" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="by.roadstatistics.ui.notifications.NotificationsFragment"
        android:label="@string/settingsMenu"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/nav_map_global" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/nav_days" />
    </fragment>
</navigation>