<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.settingsPart.SettingsFragment">

    <TextView
        android:id="@+id/spinnerDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/settings_spinner_desc"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/settingsYearSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerDescription" />

    <ImageView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/line"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_line"
        app:layout_constraintTop_toBottomOf="@id/settingsYearSpinner" />

    <TextView
        android:id="@+id/changeMapLoopDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/settingsLoopDesc"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsYearSpinner" />

    <TextView
        android:id="@+id/loopState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/plusLoopSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeMapLoopDescription" />

    <ImageButton
        android:id="@+id/plusLoopSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/plus_one"
        android:src="@drawable/ic_plus"
        app:layout_constraintEnd_toStartOf="@+id/minusLoopSize"
        app:layout_constraintTop_toTopOf="@id/loopState" />

    <ImageButton
        android:id="@+id/minusLoopSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/minus_one"
        android:src="@drawable/ic_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/loopState" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/line"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_line"
        app:layout_constraintTop_toBottomOf="@id/loopState" />

    <TextView
        android:id="@+id/settingsChangeColorDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/you_can_change_color_of_route_lines_on_you_maps"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <LinearLayout
        android:id="@+id/buttonsRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsChangeColorDesc">

        <Button
            android:id="@+id/settButtonBlack"
            style="@style/RoundedCornerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black" />

        <Button
            android:id="@+id/settButtonYellow"
            style="@style/RoundedCornerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_yellow" />

        <Button
            android:id="@+id/settButtonGreen"
            style="@style/RoundedCornerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_green" />

        <Button
            android:id="@+id/settButtonRed"
            style="@style/RoundedCornerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_red" />

    </LinearLayout>

    <ImageView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/line"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_line"
        app:layout_constraintTop_toBottomOf="@id/buttonsRoot" />

</androidx.constraintlayout.widget.ConstraintLayout>